@@ -74,7 +74,7 @@ SWM_CLI_OPTION_REGEX = bicas.const.SWM_CLI_OPTION_REGEX;
 COPC_ARRAY = [...
   bicas.utils.cli.OptionConfig('VERSION_OPTION_ID',           '--version',          '0-1',   0,  0); ...
   bicas.utils.cli.OptionConfig('IDENTIFICATION_OPTION_ID',    '--identification',   '0-1',   0,  0); ...
-  %bicas.utils.cli.OptionConfig('SWD_OPTION_ID',               '--swdescriptor',     '0-1',   0,  0); ...
+  bicas.utils.cli.OptionConfig('SWD_OPTION_ID',               '--swdescriptor',     '0-1',   0,  0); ...
   bicas.utils.cli.OptionConfig('HELP_OPTION_ID',              '--help',             '0-1',   0,  0); ...
   bicas.utils.cli.OptionConfig('SWM_OPTION_ID',               SWM_CLI_OPTION_REGEX, '0-1',   0,  0); ...
   ...
@@ -126,7 +126,7 @@ CliData.ModifiedSettingsMap = convert_modif_settings_COPVs_to_SettingsMap(...
 LogicalBfmidTable = {
   ~isempty(CovcMap('VERSION_OPTION_ID')),        'VERSION_BFM'; ...
   ~isempty(CovcMap('IDENTIFICATION_OPTION_ID')), 'IDENTIFICATION_BFM'; ...
-  %~isempty(CovcMap('SWD_OPTION_ID')),            'SWD_BFM'; ...
+  ~isempty(CovcMap('SWD_OPTION_ID')),            'SWD_BFM'; ...
   ~isempty(CovcMap('HELP_OPTION_ID')),           'HELP_BFM'; ...
   ~isempty(CovcMap('SWM_OPTION_ID')),            'SWM_BFM'};
 assert(...
@@ -139,8 +139,7 @@ SipCovpArray = CovcMap('SIP_OPTION_ID');
 
 switch CliData.bfmid
 
-  %case {'VERSION_BFM', 'IDENTIFICATION_BFM', 'SWD_BFM', 'HELP_BFM'}
-  case {'VERSION_BFM', 'IDENTIFICATION_BFM', 'HELP_BFM'}
+  case {'VERSION_BFM', 'IDENTIFICATION_BFM', 'SWD_BFM', 'HELP_BFM'}
 
     CliData.swmArg = [];
     CliData.SipMap = irf.ds.create_containers_Map('char', 'char', {}, {});
