@@ -39,9 +39,9 @@ classdef interpret_CLI_args___UTEST < matlab.unittest.TestCase
         {'--identification'}, ...
         'IDENTIFICATION_BFM', [], [], [], [], {{}, {}}, {{}, {}});
 
-      % bicas.interpret_CLI_args___UTEST.test(testCase, ...
-      %   {'--swdescriptor'}, ...
-      %   'SWD_BFM', [], [], [], [], {{}, {}}, {{}, {}});
+      bicas.interpret_CLI_args___UTEST.test(testCase, ...
+        {'--swdescriptor'}, ...
+        'SWD_BFM', [], [], [], [], {{}, {}}, {{}, {}});
 
 
 
